Fixed collapse of content screen on tablets

--- a/WebEntry/src/pages/EditorMode.css
+++ b/WebEntry/src/pages/EditorMode.css
@@ -133,7 +133,7 @@
   display: flex;
 
   width: 100%;
-  min-height: 200;
+  height: 50px;
 
   position: relative;
 }
@@ -151,6 +151,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-
-  flex: 1 1 auto;
+  position: relative;
+  width: 100%;
+  height: calc(100% - 50px);
 }
