--- a/WebEntry/src/pages/IntroductionScreen.css
+++ b/WebEntry/src/pages/IntroductionScreen.css
@@ -70,7 +70,7 @@
   display: flex;
 
   width: 100%;
-  min-height: 200;
+  height: 50px;
 
   position: relative;
 }
@@ -99,6 +99,6 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-
-  flex: 1 1 auto;
+  width:100%;
+  height: calc(100% - 50px);
 }
